--- a/unpackaged/main/default/layouts/Participant__c-Participant Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Participant__c-Participant Layout.layout-meta.xml
@@ -43,6 +43,10 @@
                 <behavior>Edit</behavior>
                 <field>Participant_Dropped_Out__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>Conditions__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
