--- a/force-app/main/default/aura/ResourcesDetailItem/ResourcesDetailItem.css
+++ b/force-app/main/default/aura/ResourcesDetailItem/ResourcesDetailItem.css
@@ -1,5 +1,8 @@
 .THIS .bitmap {
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .THIS .resource-description-footer {
