add field in Resource (Alex).

--- a/force-app/main/default/layouts/Resource__c-Article.layout-meta.xml
+++ b/force-app/main/default/layouts/Resource__c-Article.layout-meta.xml
@@ -103,6 +103,18 @@
                 <behavior>Edit</behavior>
                 <field>Language__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>URL_Part__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Updated_Date__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Remove_sharing__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns/>
         <style>TwoColumnsLeftToRight</style>
