--- a/force-app/main/default/aura/ResourceDashboardCard/ResourceDashboardCard.css
+++ b/force-app/main/default/aura/ResourceDashboardCard/ResourceDashboardCard.css
@@ -31,9 +31,8 @@
 .THIS .resource-noTAMessage {
 	display: block;
 	text-align: center;
-	position: relative;
-	top: 100px;
-	height: 350px;
+	padding-top: 15%;
+	height: 300px;
 	color: #999999;
 	font-family: "Proxima Nova";
 	font-size: 17px;
