--- a/force-app/main/default/aura/RRLink/RRLink.cmp
+++ b/force-app/main/default/aura/RRLink/RRLink.cmp
@@ -13,6 +13,7 @@
 
     <!-- handlers: -->
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
+    <aura:handler name="change" value="{!v.page}" action="{!c.doInit}"/>
 
     <!-- component body: -->
     <a href="{!v.href}"
