--- a/force-app/main/default/aura/ResourcesDetailContainer/ResourcesDetailContainer.cmp
+++ b/force-app/main/default/aura/ResourcesDetailContainer/ResourcesDetailContainer.cmp
@@ -11,7 +11,7 @@
     <aura:attribute name="resourceType" type="String" default="Article"/>
     <!--<aura:attribute name="resourceType" type="String" default="Video"/>-->
     <aura:attribute name="studyName" type="String" default="contRAst-1 Rheumatoid Arthritis Study"/>
-    <aura:attribute name="backStudy" type="String" default=""/>
+    <aura:attribute name="backStudy" type="String"/>
     <aura:attribute name="smallTitle" type="String" default="&nbsp;"/>
 
     <aura:handler name="init" value="this" action="{!c.doInit}"/>
